# piano-pro

./: .gitignore  Cargo.toml  README.md  main.py  makefile  pyproject.toml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: .gitignore  index.md
docs/.vitepress/: config.mts
docs/pages/: customization.md  installation.md  shortcuts.md  video-encoding.md  web-app.md
flatpak/: com.github.polymeilex.neothesia.desktop  com.github.polymeilex.neothesia.metainfo.xml
midi-file/src/: file.rs
neothesia/: Cargo.toml
neothesia-ai/: .gitignore  Cargo.toml
neothesia-ai/assets/models/: basic-pitch.rten
neothesia-ai/src/: args.rs  audio.rs  lib.rs  main.rs
neothesia-core/: Cargo.toml
neothesia-core/src/config/: mod.rs  model.rs
neothesia-core/src/render/: guidelines.rs
neothesia-core/src/render/background_animation/: mod.rs  shader.wgsl
neothesia-core/src/render/keyboard/: mod.rs
neothesia-core/src/render/note_labels/: mod.rs
neothesia-core/src/render/waterfall/: mod.rs
neothesia-core/src/render/waterfall/pipeline/: mod.rs  shader.wgsl
neothesia-core/src/utils/: fps_ticker.rs  resources.rs
neothesia-web/: Cargo.toml  index.html
neothesia-web/src/: main.rs
neothesia/src/: context.rs  icons.rs  lib.rs  main.rs  song.rs
neothesia/src/input_manager/: mod.rs
neothesia/src/output_manager/: mod.rs  web_backend.rs
neothesia/src/scene/: mod.rs
neothesia/src/scene/menu_scene/: audio_import.rs  midi_picker.rs  mod.rs  neo_btn.rs  settings.rs  state.rs  tracks.rs
neothesia/src/scene/playing_scene/: keyboard.rs  midi_player.rs  mod.rs  toast_manager.rs
neothesia/src/scene/playing_scene/top_bar/: mod.rs
neothesia/src/utils/: mod.rs
nuon/src/: lib.rs  settings.rs  theme.rs
wgpu-jumpstart/src/: gpu.rs
