[package]
name = "neothesia-core"
version = "0.1.0"
edition.workspace = true

[lints.rust]
# Suppress the warning triggered by `#[cfg(feature = "cargo-clippy")]` that some
# transitive dependencies emit. Remove once those crates are updated upstream.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
serde = { workspace = true, features = ["serde_derive"] }
neothesia-image.workspace = true
bytes.workspace = true
ron.workspace = true
log.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
glyphon.workspace = true
wgpu-jumpstart.workspace = true
piano-layout.workspace = true
midi-file.workspace = true
profiling.workspace = true
euclid.workspace = true
dpi.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# TODO: Port to `objc2`
objc.workspace = true
